--- a/package.json
+++ b/package.json
@@ -47,8 +47,8 @@
     "power-assert": "^1.4.1",
     "react-addons-test-utils": "^15.0.2"
   },
-  "dependencies": {
-    "react": "^15.0.2",
-    "react-dom": "^15.0.2"
+  "peerDependencies": {
+    "react": ">=15.0.2",
+    "react-dom": ">=15.0.2"
   }
 }
