--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
   ],
   "version": "1.1.1",
   "description": "React Component that provide toggle pattern",
-  "main": "lib/react-toggle-pattern.js",
+  "main": "lib/index.js",
   "directories": {
     "test": "test"
   },
