Enable strict mode with transform-strict-mode

--- a/.babelrc
+++ b/.babelrc
@@ -10,5 +10,10 @@
         "power-assert"
       ]
     }
-  }
+  },
+  "plugins": [
+    ["transform-strict-mode", {
+      "strict": true
+    }]
+  ]
 }
