--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   ],
   "devDependencies": {
     "babel-cli": "^6.8.0",
+    "babel-plugin-transform-strict-mode": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-jsdoc-to-assert": "^1.0.1",
     "babel-preset-power-assert": "^1.0.0",
