--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "src/",
     "lib/"
   ],
-  "version": "1.2.1",
+  "version": "1.3.1",
   "description": "React Component that provide toggle pattern",
   "main": "lib/index.js",
   "directories": {
@@ -38,12 +38,12 @@
   "devDependencies": {
     "babel-cli": "^6.8.0",
     "babel-preset-es2015": "^6.6.0",
-    "babel-preset-jsdoc-to-assert": "^1.0.1",
+    "babel-preset-jsdoc-to-assert": "^4.0.0",
     "babel-preset-power-assert": "^1.0.0",
     "babel-preset-react": "^6.5.0",
     "babel-register": "^6.8.0",
     "enzyme": "^2.3.0",
-    "mocha": "^2.4.5",
+    "mocha": "^3.1.0",
     "power-assert": "^1.4.1",
     "react": "^15.0.2",
     "react-addons-test-utils": "^15.0.2",
@@ -51,5 +51,8 @@
   },
   "peerDependencies": {
     "react": ">=15.0.2"
+  },
+  "dependencies": {
+    "uuid": "^2.0.3"
   }
 }
