--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "src/",
     "lib/"
   ],
-  "version": "1.3.1",
+  "version": "1.4.0",
   "description": "React Component that provide toggle pattern",
   "main": "lib/index.js",
   "directories": {
@@ -52,6 +52,5 @@
   "peerDependencies": {
     "react": ">=15.0.2"
   },
-  "dependencies": {
-  }
+  "dependencies": {}
 }
