--- a/package.json
+++ b/package.json
@@ -36,18 +36,20 @@
     "toggle"
   ],
   "devDependencies": {
-    "babel-cli": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-jsdoc-to-assert": "^4.0.0",
-    "babel-preset-power-assert": "^1.0.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-register": "^6.8.0",
-    "enzyme": "^2.3.0",
-    "mocha": "^3.1.0",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.0.0",
+    "babel-preset-jsdoc-to-assert": "^5.0.0",
+    "babel-preset-power-assert": "^3.0.0",
+    "enzyme": "^3.6.0",
+    "enzyme-adapter-react-16": "^1.5.0",
+    "mocha": "^5.2.0",
     "power-assert": "^1.4.1",
-    "react": "^15.0.2",
+    "react": "16",
     "react-addons-test-utils": "^15.0.2",
-    "react-dom": "^15.0.2"
+    "react-dom": "16"
   },
   "peerDependencies": {
     "react": ">=15.0.2"
